# practice

./: CMakeLists.txt  README.md  main.c  main.h
examples/: avlTree.c  avlTree.h  binHeap.c  binHeap.h  hashQuad.c  hashQuad.h  list.c  list.h  maxSubSequenceSum.c  maxSubSequenceSum.h  polynomial.c  polynomial.h  searchProblem.c  searchProblem.h  searchTree.c  searchTree.h  sortProblem.c  sortProblem.h  stackArray.c  stackArray.h  stackList.c  stackList.h
lib/: baseArrayCreat.c  baseArrayCreat.h  baseGraphCreate.c  baseGraphCreate.h  createPrime.c  createPrime.h  gcd.c  gcd.h  max.c  max.h  printArray.c  printArray.h  swapVariables.c  swapVariables.h
